2004-04-16  Juanma Barranquero  <lektu@terra.es>

	* bookmark.el (bookmark-send-edited-annotation): Fix docstring.
	(bookmark-edit-annotation-mode): Add mode name.

2004-04-15  Nick Roberts  <nick@nick.uklinux.net>

	* progmodes/gdb-ui.el (gdb-goto-info): New function.

	* progmodes/gud.el (gud-menu-map, gud-tool-bar-map): Add help button.

2004-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/bytecomp.el (batch-byte-compile-file):
	Give a backtrace if requested.

	* progmodes/ada-mode.el (ada-create-menu): Remove redundant call.

	* progmodes/python.el (python-mouse-2-command, python-RET-command):
	Remove unused functions.
	(python-orig-start-line, python-orig-file): Remove.
	(python-orig-start): New var.
	(python-input-filter, python-compilation-line-number)
	(python-send-region, python-load-file): Use it.

	* info.el (info): Always jump to *info*.

	* subr.el (posn-set-point): New function.

	* mouse.el (mouse-set-point): Use it.

	* progmodes/compile.el (compile-goto-error): Use it.
	(compilation-button-map): New keymap.
	(compilation-error-properties): Use it.
	(compilation-shell-minor-mode-map): Don't bind mouse-2.

	* smerge-mode.el (smerge-popup-context-menu): Use it.

	* emacs-lisp/checkdoc.el (checkdoc-output-mode-map)
	(checkdoc-find-error-mouse, checkdoc-find-error): Use it to merge the
	mouse and non-mouse case.

	* diff-mode.el (diff-goto-source): Make it work for mouse bindings.
	(diff-mouse-goto-source): Make it an alias of diff-goto-source.

	* pcvs.el (cvs-mode-toggle-mark): Rename from cvs-mouse-toggle-mark.
	Make it work for non-mouse events.

	* pcvs-info.el (cvs-status-map): Update binding name.

2004-04-14  Mark A. Hershberger  <mah@everybody.org>

	* xml.el (xml-maybe-do-ns): New function to handle namespace
	parsing of both attribute and element names.
	(xml-ns-parse-ns-attrs, xml-ns-expand-el, xml-ns-expand-attr)
	(xml-intern-attrlist): Remove in favor of xml-maybe-do-ns.